--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,7 +11,7 @@ body {
   height: 100vh;
   margin: 0;
   text-align: center;
-  background-color: #c3d3d2;
+  background-color: #b1c0bf;
 }
 
 a {
